Customize Page again

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
           <p class="value">20g</p>
         </div>
         <hr class="nutrition-hr">
-        <div class="items">
+        <div class="items" id="last-item">
           <p>Fat</p>
           <p class="value">22g</p>
         </div>
